UI/Table/Presentation: use buttons and do not hide opposite expander

--- a/lang/ilias_en.lang
+++ b/lang/ilias_en.lang
@@ -16662,6 +16662,8 @@ ui#:#datetime_required#:#Time/Date required
 ui#:#duration_default_label_end#:#end
 ui#:#duration_default_label_start#:#start
 ui#:#duration_end_must_not_be_earlier_than_start#:#Start must not be later than end.
+ui#:#presentaion_table_collapse#:#collapse all
+ui#:#presentaion_table_expand#:#expand all
 ui#:#ui_chars_max#:#Maximum:
 ui#:#ui_chars_min#:#Minimum:
 ui#:#ui_chars_remaining#:#Characters remaining:
